# bubner-tourplanning

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
Bakery_tours/: Data collection_v3.xlsx  Links.txt
cache/: nominatim-04ea769560d483c594248a46a823d311581b3797  nominatim-08f5e1ff33380959a83cb8da18d0023e142eaab5  nominatim-12b1e99b8647c768dc1caa1265fcb48d34be3a75  nominatim-144f8da398ff9dd1f7ad5f149add6b7d0145721a  nominatim-2cbdd799733ab3dd7929d33c153a452761b62348  nominatim-30e102086f1e51edf42ad64e45acfec926d98008  nominatim-3229623e4b53ace2e4552d05ab34331f6d035787  nominatim-395f05ac0f9296c7e9f1119f6e9edade2bd936fe  nominatim-442dd94db49e3179fbb18c4d141e74eb8b981a27  nominatim-4dc524b715d395cee8ca9218e664843769dd9707  nominatim-59dbcd6b72ce18699b2e4393c86b9a3063f52104  nominatim-5fc08d43e6563d2f0fc8f2ad33b26162bce6e228  nominatim-65562f20768de5190037c1b5fb1e767d6ad31f51  nominatim-686ea4bbffb3ecadca4e85b26257d93203fa8a5c  nominatim-697b190a0145042199477f0f7325a2d31fe427ec  nominatim-6c576a24d17e6a8b102131d87e55a5f853dff3a5  nominatim-82433e10cf7790b7152dcd92c70d13ed218941f2  nominatim-8bc97473c77a2d13b90da7466debcda295458dee  nominatim-9657233b93848421da04e430d005411bcd41c622  nominatim-972205c6f3007a3665ee2e9b93afbfdec34202f4  nominatim-97dcc270aec60ef9f052896da752432447af35ac  nominatim-bbd0f954074707d8aebd3e574aa53dd7928b3d53  nominatim-cc6cd4ca024a608e6c48e735e050b6722e972950  nominatim-cd995809f2b36c58a457a0b0ecc47941b48e0b56  nominatim-d1f0bba3b3dfc13e22805f1ab056014e905318cf  (+6 more)
data/: Data.xlsx  osrm_data.pkl  (+1 more)
src/: etl.py  (+5 more)
(+3 files in other folders)
